1. Added the SIERA work experience page. 2. Updated CV (resume has been replaced).

--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -5,190 +5,227 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Khai Yi Chin | My Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="../images/K Favicon.ico" type="image/x-icon" />
-		<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
-	</head>
-	
-	<body>
-		<div id="page-wrapper">
-			<header id="header"><!-- Header -->
-				<div class="logo container">
-					<div>
-						<h1><a id="logo">Work & Leadership Experiences</a></h1>
-					</div>
-				</div>
-			</header>
-			
-		  <nav id="nav"><!-- Nav -->
-        <ul>
-          <li id="home"><!-- Khai Yi Chin Tab -->
-            <a href="../index.html">Khai Yi Chin</a>
-          </li>
-          <li><!-- My Profile Tab -->
-            <a id="my-profile" href="../index.html#background">My Profile</a>
-            <ul>
-              <li>
-                <a href="../index.html#background">Background</a>
-              </li>
-              <li>
-                <a>Education</a>
-                <ul>
-                  <li>
-                    <a href="../index.html#ut">University of Texas at Austin (2016 - 2018)</a>
-                  </li>
-                  <li>
-                    <a href="../index.html#uofm">University of Michigan (2013 - 2016)</a>
-                  </li>
-                  <li>
-                    <a href="../index.html#sunway">Sunway University (2011 - 2013)</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li class="current"><!-- Work Experiences Tab -->
-            <a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
-            <ul>
-							<li>
-								<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
-							</li>
-              <li>
-                <a>University of Texas at Austin, TX, USA</a>
-                <ul>
-                  <li>
-                    <a href="ut-gra.html">Dept. of Mechanical Engineering</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a>University of Michigan, MI, USA</a>
-                <ul>
-                  <li>
-                    <a href="ramlab.html">RAMlab</a>
-                  </li>
-                  <li>
-                    <a href="pierpont.html">Pierpont Commons</a>
-                  </li>
-                  <li>
-                    <a href="midwest.html">Malaysia Midwest Games Committee</a>
-                  </li>
-                  <li>
-                    <a href="sct.html">Solar Car Team</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a>Sunway University, Selangor, Malaysia</a>
-                <ul>
-                  <li>
-                    <a href="adtp.html">American Degree Transfer Program Student Committee</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="projects-resume.html">Projects &amp; Résumé</a>
-              </li>
-            </ul>
-          </li>
-          <li><!-- Interests Tab -->
-            <a href="../interests/interests.html">Interests</a>
-            <ul>
-              <li>
-                <a href="../interests/interests.html">Hobbies &amp; Projects</a>
-              </li>
-            </ul>
-          </li>
-          <li><!-- Blog Tab -->
-            <a href="https://khaiyichin.blogspot.com">Blog</a>
-          </li>
-        </ul>
-      </nav>
 
-			<div id="main-wrapper"><!-- Main -->
-				<div id="main" class="container">
-					<div class="row">
-						<div class="12u">
-							<div class="content">
-								<article class="box page-content">
-										<header><!-- Projects-->
-											<h1>Projects</h1>
-										</header>
-										<section>
-											<h4 class="initial h4">2015 - Online Portfolio</h4>
-											<p>As a mechanical engineering student, coding is quite an essential skill to have, considering that we have to deal with Matlab and C quite often. However, I came across learning HTML when I joined the Malaysia Midwest Games 2015 Committee's Web Department to help out. My friends introduced me to sites like Codecademy and Code School, which I find incredibly accessible to learn coding skills. With much encouragement by my peers, I started learning HTML and CSS through Codecademy, which began sometime in March.</p>
-											<p>I wanted to create an online portfolio that could elaborate on the skills and experiences that I couldn't do so on my résumé, plus show employers myself from a less academic perspective. It took me about 5 months to learn, design, and set up my online portfolio. I used the HTML5UP template TXT, which provided the base design for this website.</p>
-											<p>I'd like to voice my appreciation to Vicky Ong, Puvindren Supramaniam for providing some of the images on this website. I'd also like to thank Qyira Yusri for spell-checking my website, and Sayyid Sofwan, Eugene Goh, Yusuf Abdullah, Suffian Hamzah for sharing their web building knowledge.</p>
-										</section>
-										<header><!-- Résumé-->
-											<h1>Résumé</h1>
-										</header>
-										<section>
-											<a href="files/Chin, Khai Yi (Resume).pdf"><b>Click here to view or download (PDF) - last updated 02/27/19</b></a>
-										</section>
-								</article>
-							</div>
+<head>
+	<title>Khai Yi Chin | My Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="shortcut icon" href="../images/K Favicon.ico" type="image/x-icon" />
+	<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+</head>
+
+<body>
+	<div id="page-wrapper">
+		<header id="header">
+			<!-- Header -->
+			<div class="logo container">
+				<div>
+					<h1><a id="logo">Work & Leadership Experiences</a></h1>
+				</div>
+			</div>
+		</header>
+
+		<nav id="nav">
+			<!-- Nav -->
+			<ul>
+				<li id="home">
+					<!-- Khai Yi Chin Tab -->
+					<a href="../index.html">Khai Yi Chin</a>
+				</li>
+				<li>
+					<!-- My Profile Tab -->
+					<a id="my-profile" href="../index.html#background">My Profile</a>
+					<ul>
+						<li>
+							<a href="../index.html#background">Background</a>
+						</li>
+						<li>
+							<a>Education</a>
+							<ul>
+								<li>
+									<a href="../index.html#ut">University of Texas at Austin (2016 - 2018)</a>
+								</li>
+								<li>
+									<a href="../index.html#uofm">University of Michigan (2013 - 2016)</a>
+								</li>
+								<li>
+									<a href="../index.html#sunway">Sunway University (2011 - 2013)</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li class="current">
+					<!-- Work Experiences Tab -->
+					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
+					<ul>
+						<li>
+							<a href="siera.html">SIERA.AI</a>
+						</li>
+						<li>
+							<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
+						</li>
+						<li>
+							<a>University of Texas at Austin, TX, USA</a>
+							<ul>
+								<li>
+									<a href="ut-gra.html">Dept. of Mechanical Engineering</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a>University of Michigan, MI, USA</a>
+							<ul>
+								<li>
+									<a href="ramlab.html">RAMlab</a>
+								</li>
+								<li>
+									<a href="pierpont.html">Pierpont Commons</a>
+								</li>
+								<li>
+									<a href="midwest.html">Malaysia Midwest Games Committee</a>
+								</li>
+								<li>
+									<a href="sct.html">Solar Car Team</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a>Sunway University, Selangor, Malaysia</a>
+							<ul>
+								<li>
+									<a href="adtp.html">American Degree Transfer Program Student Committee</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="projects-resume.html">Projects &amp; Résumé</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<!-- Interests Tab -->
+					<a href="../interests/interests.html">Interests</a>
+					<ul>
+						<li>
+							<a href="../interests/interests.html">Hobbies &amp; Projects</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<!-- Blog Tab -->
+					<a href="https://khaiyichin.blogspot.com">Blog</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div id="main-wrapper">
+			<!-- Main -->
+			<div id="main" class="container">
+				<div class="row">
+					<div class="12u">
+						<div class="content">
+							<article class="box page-content">
+								<header>
+									<!-- Projects-->
+									<h1>Projects</h1>
+								</header>
+								<section>
+									<h4 class="initial h4">2015 - Online Portfolio</h4>
+									<p>As a mechanical engineering student, coding is quite an essential skill to have,
+										considering that we have to deal with Matlab and C quite often. However, I came
+										across learning HTML when I joined the Malaysia Midwest Games 2015 Committee's
+										Web Department to help out. My friends introduced me to sites like Codecademy
+										and Code School, which I find incredibly accessible to learn coding skills. With
+										much encouragement by my peers, I started learning HTML and CSS through
+										Codecademy, which began sometime in March.</p>
+									<p>I wanted to create an online portfolio that could elaborate on the skills and
+										experiences that I couldn't do so on my résumé, plus show employers myself from
+										a less academic perspective. It took me about 5 months to learn, design, and set
+										up my online portfolio. I used the HTML5UP template TXT, which provided the base
+										design for this website.</p>
+									<p>I'd like to voice my appreciation to Vicky Ong, Puvindren Supramaniam for
+										providing some of the images on this website. I'd also like to thank Qyira Yusri
+										for spell-checking my website, and Sayyid Sofwan, Eugene Goh, Yusuf Abdullah,
+										Suffian Hamzah for sharing their web building knowledge.</p>
+								</section>
+								<header>
+									<!-- Résumé-->
+									<h1>Résumé</h1>
+								</header>
+								<section>
+									<a href="files/Chin, Khai Yi (General CV).pdf"><b>Click here to view or download (PDF) -
+											last updated 11/05/20</b></a>
+								</section>
+							</article>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<footer id="footer" class="container"><!-- Footer -->
-				<div class="row 200%">
-					<div class="12u">
-						<section><!-- Contact -->
-							<h2 class="major"><span>Get in touch</span></h2>
-							<ul class="contact">
-								<li>
-									<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span class="label">Linkedin</span></a>
-								</li>
-								<li>
-									<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span class="label">Facebook</span></a>
-								</li>
-								<li>
-									<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span class="label">Twitter</span></a>
-								</li>
-								<li>
-									<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span class="label">Instagram</span></a>
-								</li>
-								<!--<li>-->
-								<!--	<a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
-								<!--</li>-->
-							</ul>
-						</section>
-					</div>
-				</div>
-	
-				<!-- Copyright -->
-				<div id="copyright">
-					<ul class="menu">
-						<li>
-							© Khai Yi Chin. All rights reserved
-						</li>
-						<li>
-							Design: <a href="http://html5up.net">HTML5 UP</a>
-						</li>
-						<li>
-							Last Updated: <var id="date"></var>
-						</li>
-					</ul>
-				</div>
-			</footer>
 		</div>
-	
-		<!-- Scripts -->
-		<script src="../assets/js/jquery.min.js"></script>
-		<script src="../assets/js/jquery.dropotron.min.js"></script>
-		<script src="../assets/js/skel.min.js"></script>
-		<script src="../assets/js/skel-viewport.min.js"></script>
-		<script src="../assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="../assets/js/main.js"></script>
-		<script>document.getElementById('date').innerHTML = update_date;</script><!--"Last Updated" date-->
-	</body>
+
+		<footer id="footer" class="container">
+			<!-- Footer -->
+			<div class="row 200%">
+				<div class="12u">
+					<section>
+						<!-- Contact -->
+						<h2 class="major"><span>Get in touch</span></h2>
+						<ul class="contact">
+							<li>
+								<a class="icon fa-linkedin"
+									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
+										class="label">Linkedin</span></a>
+							</li>
+							<li>
+								<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span
+										class="label">Facebook</span></a>
+							</li>
+							<li>
+								<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span
+										class="label">Twitter</span></a>
+							</li>
+							<li>
+								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span
+										class="label">Instagram</span></a>
+							</li>
+							<!--<li>-->
+							<!--	<a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
+							<!--</li>-->
+						</ul>
+					</section>
+				</div>
+			</div>
+
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul class="menu">
+					<li>
+						© Khai Yi Chin. All rights reserved
+					</li>
+					<li>
+						Design: <a href="http://html5up.net">HTML5 UP</a>
+					</li>
+					<li>
+						Last Updated: <var id="date"></var>
+					</li>
+				</ul>
+			</div>
+		</footer>
+	</div>
+
+	<!-- Scripts -->
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.dropotron.min.js"></script>
+	<script src="../assets/js/skel.min.js"></script>
+	<script src="../assets/js/skel-viewport.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="../assets/js/main.js"></script>
+	<script>document.getElementById('date').innerHTML = update_date;</script>
+	<!--"Last Updated" date-->
+</body>
+
 </html>
