Fixed stray period in siera.html.

--- a/work-experiences/siera.html
+++ b/work-experiences/siera.html
@@ -155,7 +155,7 @@
 										and dangerous work.</p>
 								</section>
 								<section class="work-experience section">
-									<!-- My Work and Experience -->.
+									<!-- My Work and Experience -->
 									<h3 class="individual">My Work and Experience</h3>
 									<span class="image left square"
 										title="A simulation model of an autonomous tugger connected to 3 fifth wheel wagons"><img
