1. Added GitHub link. 2. Added new composition. 3. Reviewed and updated index text.

--- a/interests/interests.html
+++ b/interests/interests.html
@@ -178,7 +178,15 @@
 									<!-- Projects -->
 									<h4 class="initial h4">Projects</h4>
 									<li>
-										<a href="files/Canon in Threes Ter-Lemas.pdf">Canon in Threes Ter-Lemas</a>
+										<a href="files/Tournesols.pdf">Tournesols (2016)</a>
+										<p>This piece for piano and flute was for a composition course in my penultimate
+											semester at the University of Michigan. This work, which is French for
+											'Sunflowers', was inspired by Vincent van Gogh's work of the same name, and
+											is my personal favorite.</p>
+									</li>
+									<li>
+										<a href="files/Canon in Threes Ter-Lemas.pdf">Canon in Threes Ter-Lemas
+											(2015)</a>
 										<p>This work was written for the Malaysia Midwest Games Closing Ceremony -
 											Midwest Night's opening performance. Using the theme of Johann Pachabel's
 											Canon in D, I made a medley with some waltzy motives that combined the
@@ -188,7 +196,7 @@
 											much involvement of the player's creativity.</p>
 									</li>
 									<li>
-										<a href="files/Dark Chocolate Dance.pdf">Dark Chocolate Dance</a>
+										<a href="files/Dark Chocolate Dance.pdf">Dark Chocolate Dance (2013)</a>
 										<p>This was my end-of-semester project in my first composition course, where we
 											had to have our compositions performed, either by ourselves or by other
 											musicians. I wrote this piece primarily to dedicate it to a person that I
@@ -197,7 +205,8 @@
 											and a saxist to perform with me.</p>
 									</li>
 									<li>
-										<a href="files/Melody for Piano and Violin.pdf">Melody for Piano and Violin</a>
+										<a href="files/Melody for Piano and Violin.pdf">Melody for Piano and Violin
+											(2013)</a>
 										<p>This was my very first proper attempt in composition. Composed as my
 											mid-semester project, I wrote this simple piece with much effort in
 											attempting counterpoint melodies, which was the main goal of the project. I
@@ -250,24 +259,22 @@
 				<div class="12u">
 					<section>
 						<!-- Contact -->
-						<h2 class="major"><span>Get in touch</span></h2>
+						<h2 class="major"><span>Find me at</span></h2>
 						<ul class="contact">
 							<li>
-								<a class="icon fa-linkedin"
-									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
-										class="label">Linkedin</span></a>
+								<a class="icon fa-github" href="https://www.github.com/khaiyichin/">
+									<span class="label">GitHub</span>
+								</a>
 							</li>
 							<li>
-								<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span
-										class="label">Facebook</span></a>
+								<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a">
+									<span class="label">Linkedin</span>
+								</a>
 							</li>
 							<li>
-								<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span
-										class="label">Twitter</span></a>
-							</li>
-							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span
-										class="label">Instagram</span></a>
+								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/">
+									<span class="label">Instagram</span>
+								</a>
 							</li>
 							<!--<li>-->
 							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
