--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -353,27 +353,25 @@
 				<div class="12u">
 					<section>
 						<!-- Contact -->
-						<h2 class="major"><span>Get in touch</span></h2>
+						<h2 class="major"><span>Find me at</span></h2>
 						<ul class="contact">
 							<li>
-								<a class="icon fa-linkedin"
-									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
-										class="label">Linkedin</span></a>
+								<a class="icon fa-github" href="https://www.github.com/khaiyichin/">
+									<span class="label">GitHub</span>
+								</a>
 							</li>
 							<li>
-								<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span
-										class="label">Facebook</span></a>
+								<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a">
+									<span class="label">Linkedin</span>
+								</a>
 							</li>
 							<li>
-								<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span
-										class="label">Twitter</span></a>
-							</li>
-							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span
-										class="label">Instagram</span></a>
+								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/">
+									<span class="label">Instagram</span>
+								</a>
 							</li>
 							<!--<li>-->
-							<!--	<a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
+							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
 							<!--</li>-->
 						</ul>
 					</section>
