1. Added completed COAST page and nav links. 2. Updated resume.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 						Experiences</a>
 					<ul>
 						<li>
+							<a href="work-experiences/coast.html">COAST Autonomous</a>
+						</li>
+						<li>
 							<a href="work-experiences/siera.html">SIERA.AI</a>
 						</li>
 						<li>
