--- a/interests/interests.html
+++ b/interests/interests.html
@@ -63,7 +63,10 @@
 						Experiences</a>
 					<ul>
 						<li>
-							<a href="work-experiences/siera.html">SIERA.AI</a>
+							<a href="../work-experiences/coast.html">COAST Autonomous</a>
+						</li>
+						<li>
+							<a href="../work-experiences/siera.html">SIERA.AI</a>
 						</li>
 						<li>
 							<a href="../work-experiences/dunan.html">DunAn Precision, Inc. - R&D Division</a>
