--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -62,6 +62,9 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a href="coast.html">COAST Autonomous</a>
+						</li>
+						<li>
 							<a href="siera.html">SIERA.AI</a>
 						</li>
 						<li>
@@ -156,8 +159,8 @@
 									<h1>Résumé</h1>
 								</header>
 								<section>
-									<a href="files/Chin, Khai Yi (General CV).pdf"><b>Click here to view or download (PDF) -
-											last updated 11/05/20</b></a>
+									<a href="files/Chin, Khai Yi (Resume).pdf"><b>Click here to view or download (PDF) -
+											last updated 08/18/21</b></a>
 								</section>
 							</article>
 						</div>
