--- a/work-experiences/siera.html
+++ b/work-experiences/siera.html
@@ -62,6 +62,9 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a href="coast.html">COAST Autonomous</a>
+						</li>
+						<li>
 							<a href="siera.html">SIERA.AI</a>
 						</li>
 						<li>
