Minor edits to work-experiences main page.

--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -271,10 +271,11 @@
 									<p>During my master's degree, I worked with Dr. Eric Fahrenthold from the Mechnical
 										Engineering Department on the investigation of doped carbon nanotube models as
 										part of a basic research project funded by the Office of Naval Research (ONR).
-										Currently, the research has been completed and results are being compiled for
-										submission to journals while my master's thesis is available publicly on the <a
-											href="https://repositories.lib.utexas.edu/handle/2152/72446"> UT Electronic
-											Theses and Dissertations website </a>. <a href="ut-gra.html">Read more</a>
+										The outcomes of my research can be found in the form of my master's thesis on
+										the <a href="https://repositories.lib.utexas.edu/handle/2152/72446">UT
+											Electronic Theses and Dissertations website</a> and a <a
+											href="https://doi.org/10.1016/j.commatsci.2021.110573">Computational
+											Materials Science</a> journal article. <a href="ut-gra.html">Read more</a>
 									</p>
 								</section>
 							</article>
