Added NEST lab materials (incomplete).

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 						Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="work-experiences/nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="work-experiences/coast.html">COAST Autonomous</a>
 						</li>
 						<li>
@@ -152,7 +160,7 @@
 										<a class="image featured" title="Petronas Twin Towers"><img
 												src="main/images/malaysia.jpg" alt="Petronas Twin Towers"></a>
 										<h3><a>Hometown</a></h3>
-										<p>I was born in 1993 in the city of Kuala Lumpur, Malaysia. Growing
+										<p>I was born in the city of Kuala Lumpur, Malaysia. Growing
 											up in an immensely diverse country, I lived and learned with friends and
 											colleagues of varied ethnicities through primary school till college.</p>
 										<p>As a kid, I learned to speak 3 languages: Malay, Mandarin, and English, which
@@ -168,13 +176,13 @@
 								<div class="3u 12u(mobile)">
 									<section class="box feature">
 										<!-- Feature -->
-										<a class="image featured" title="Our trip to Vietnam"><img
-												src="main/images/family.jpg" alt="Our trip to Vietnam"></a>
+										<a class="image featured" title="Our trip to Singapore"><img
+												src="main/images/family.jpg" alt="Our trip to Singapore"></a>
 										<h3><a>Family</a></h3>
 										<p>Born to a mechanical engineer and a mathematics teacher, my siblings and I
-											were exposed to the world of scientific knowledge from a tender age. Our
-											family members enjoy a close relationship with each other and preserve
-											Chinese family traditions as proud Malaysians.</p>
+											were very fortunate to be able to visit many parts of the world. Our family
+											members enjoy a close relationship with each other even though we are miles apart.
+										</p>
 									</section>
 								</div>
 								<div class="3u 12u(mobile)">
@@ -188,8 +196,8 @@
 											cultivated my interests today; I'm a huge fan of classical music and sports,
 											especially football (soccer).</p>
 										<p>As for TV programs, I only had access to documentary channels like the
-											Discovery Channel and the National Geographic, which developed my passion
-											for scientific progress and advancement.</p>
+											Discovery Channel and the National Geographic, which cultivated my interest
+											in science and engineering from an early age.</p>
 									</section>
 								</div>
 							</div>
