--- a/interests/interests.html
+++ b/interests/interests.html
@@ -63,6 +63,14 @@
 						Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="../work-experiences/nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="../work-experiences/coast.html">COAST Autonomous</a>
 						</li>
 						<li>
