--- a/work-experiences/ut-gra.html
+++ b/work-experiences/ut-gra.html
@@ -62,6 +62,14 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="coast.html">COAST Autonomous</a>
 						</li>
 						<li>
@@ -132,7 +140,7 @@
 						<div class="content">
 							<article class="box page-content">
 								<header>
-									<h1>University of Texas at Austin</h1>
+									<h1>Department of Mechanical Engineering</h1>
 									<p>Graduate Research Assistant</p>
 								</header>
 								<section class="introduction">
