--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -62,6 +62,14 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="coast.html">COAST Autonomous</a>
 						</li>
 						<li>
@@ -136,6 +144,12 @@
 								<ul class="divided">
 									<li>
 										<article class="box post-summary">
+											<h3><a href="nestlab.html">NEST Lab</a></h3>
+											<h5><a href="nestlab.html">Graduate Research Assistant</a></h5>
+										</article>
+									</li>
+									<li>
+										<article class="box post-summary">
 											<h3><a href="coast.html">COAST Autonomous</a></h3>
 											<h5><a href="coast.html">Robotics Engineer</a></h5>
 										</article>
@@ -205,6 +219,19 @@
 						<!-- Main Content -->
 						<div class="content content-right">
 							<article class="box page-content">
+								<!-- NEST Lab -->
+								<header>
+									<h2>Worcester Polytechnic Institute<br />NEST Lab</h2>
+									<h4>Worcester, MA, USA</h4>
+									<p>Graduate Research Assistant</p>
+								</header>
+								<section class="work-experience section">
+									<span class="image featured" title="NEST Lab logo"><img
+											src="images/nestlab.png" alt="NEST Lab logo" /></span>
+									<p>WIP <a href="nestlab.html">Read more</a></p>
+								</section>
+							</article>
+							<article class="box page-content">
 								<!-- COAST Autonomous -->
 								<header>
 									<h2>COAST Autonomous</h2>
@@ -261,7 +288,7 @@
 							<article class="box page-content">
 								<!-- UT Austin -->
 								<header>
-									<h2>The University of Texas at Austin Dept. of Mechanical Engineering</h2>
+									<h2>The University of Texas at Austin<br />Dept. of Mechanical Engineering</h2>
 									<h4>Austin, TX, USA</h4>
 									<p>Graduate Research Assistant</p>
 								</header>
@@ -282,8 +309,8 @@
 							<article class="box page-content">
 								<!-- RAMlab -->
 								<header>
-									<h2>Robotics and Motion Laboratory</h2>
-									<h4>University of Michigan, USA</h4>
+									<h2>University of Michigan<br />Robotics and Motion Laboratory</h2>
+									<h4>Ann Arbor, MI, USA</h4>
 									<p>Undergraduate Student Research Assistant</p>
 								</header>
 								<section class="work-experience section">
@@ -300,8 +327,8 @@
 							<article class="box page-content">
 								<!-- Pierpont Commons -->
 								<header>
-									<h2>Pierpont Commons</h2>
-									<h4>University of Michigan, USA</h4>
+									<h2>University of Michigan<br />Pierpont Commons</h2>
+									<h4>Ann Arbor, MI, USA</h4>
 									<p>Student Building Manager</p>
 								</header>
 								<section class="work-experience section">
@@ -317,8 +344,8 @@
 							<article class="box page-content">
 								<!-- University of Michigan Malaysian Student Association' -->
 								<header>
-									<h2>Malaysia Midwest Games Committee</h2>
-									<h4>University of Michigan, USA</h4>
+									<h2>University of Michigan<br />Malaysia Midwest Games Committee</h2>
+									<h4>Ann Arbor, MI, USA</h4>
 									<p>Logistics Director, Check-in Co-director</p>
 								</header>
 								<section class="work-experience section">
@@ -338,8 +365,8 @@
 							<article class="box page-content">
 								<!-- University  of Michigan Solar Car Team -->
 								<header>
-									<h2>Solar Car Team</h2>
-									<h4>University of Michigan, USA</h4>
+									<h2>University of Michigan<br />Solar Car Team</h2>
+									<h4>Ann Arbor, MI, USA</h4>
 									<p>Mechanical Design Engineer</p>
 								</header>
 								<section class="work-experience section">
@@ -355,7 +382,7 @@
 							<article class="box page-content" id="sunway">
 								<!-- ADTP Student Committee -->
 								<header>
-									<h2>American Degree Transfer Program Student Committee</h2>
+									<h2>Sunway University<br />ADTP Student Committee</h2>
 									<h4>Sunway University, Malaysia</h4>
 									<p>Head of Human Resources</p>
 								</header>
