--- a/work-experiences/midwest.html
+++ b/work-experiences/midwest.html
@@ -62,6 +62,14 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="coast.html">COAST Autonomous</a>
 						</li>
 						<li>
