--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -62,6 +62,14 @@
 					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
 					<ul>
 						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="coast.html">COAST Autonomous</a>
 						</li>
 						<li>
@@ -136,9 +144,29 @@
 									<h1>Projects</h1>
 								</header>
 								<section>
+									<h4 class="initial h4">2024 - SVGDCpp</h4>
+									<span class="image right square"
+										style="width:200px;height:200px;margin-bottom:10px;"><img
+											src="images/projects-svgd_example_360p.gif"> </span>
+									<a href="https://github.com/khaiyichin/SVGDCpp" target="_blank" aria-label="GitHub"
+										style="display: inline-flex; align-items: center; text-decoration: none; color: black; font-family: 'Ubuntu', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 600;">
+										<img src="https://github.com/fluidicon.png" alt="GitHub" width="30" height="30"
+											style="margin-right: 8px;">
+										SVGDCpp: Stein Variational Gradient Descent in C++
+									</a>
+									<p>
+										One of my research projects involve the design of a self-calibration algorithm
+										to track sensor degradation levels in a swarm of faulty robots.
+										My general approach was using a recursive Bayes estimator, which led me to the
+										discovery of the <a href="https://arxiv.org/abs/1608.04471">Stein Variational
+											Gradient Descent, a general purpose Bayesian inference algorithm</a>. My
+										options to use it in a C++ program was limited, which led to my development of
+										this library.
+									</p>
+								</section>
+								<section>
 									<h4 class="initial h4">2015 - Online Portfolio</h4>
-									<p>As a mechanical engineering student, coding is quite an essential skill to have,
-										considering that we have to deal with Matlab and C quite often. However, I came
+									<p>As an engineering student, coding is quite an essential skill to have. I came
 										across learning HTML when I joined the Malaysia Midwest Games 2015 Committee's
 										Web Department to help out. My friends introduced me to sites like Codecademy
 										and Code School, which I find incredibly accessible to learn coding skills. With
